--- a/style.css
+++ b/style.css
@@ -313,5 +313,79 @@
    line-height: 22px;
    text-decoration-line: underline;
    color: #FFFFFF;
+   transition: 200ms ease;
+}
 
+.place__link:hover {
+   opacity: .8;
+   transition: 200ms ease;
+}
+
+.cover {
+   position: relative;
+   width: calc(100% - (48px*2));
+   height: 740px;
+   display: flex;
+   margin: 0 auto;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   background: no-repeat url("./images/__background.jpg");
+   background-position: center;
+   background-size: cover;
+}
+
+.cover::before {
+   content: '';
+   display: block;
+   position: absolute;
+   top:0;
+   left:0;
+   right:0;
+   bottom:0;
+   width: 100%;
+   height: 100%;
+   background-image: url(./images/__overlay.jpg);
+   background: #2A2C2F;
+   opacity: .3;
+   transition: 400ms ease-in-out;
+}
+
+@media screen and (max-width: 1070px) {
+   .cover {
+      width: 100%;
+      max-height: 640px;
+   }
+}
+
+.cover:hover::before {
+   opacity: .8;
+   cursor: pointer;
+
+   transition: 300ms ease-in;
+}
+
+.cover__title {
+   width: 560px;
+   font-weight: 900;
+   font-size: 72px;
+   line-height: 76px;
+   text-align: center;
+   color: #FFFFFF;
+   z-index: 1;
+}
+
+.title-link {
+   text-decoration: none;
+   color: #FFFFFF;
+}
+
+.cover__subtitle {
+   width: 360px;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 22px;
+   text-align: center;
+   color: #FFFFFF;
+   z-index: 1;
 }
