--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,17 +1,17 @@
-.header__lang_link {
+.header__lang-link {
    text-decoration: none;
    font-size: 24px;
    color: #FFFFFF;
 }
 
 @media screen and (max-width: 750px) {
-   .header__lang_link {
+   .header__lang-link {
       font-size: 18px;
       line-height: 20px;
       text-align: right;
    }
 }
 
-.header__lang_link:nth-of-type(2n - 1) {
+.header__lang-link:nth-of-type(2n - 1) {
    margin: 0 14px 0 0;
 }
