--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,4 +1,4 @@
-.intro__list_item {
+.intro__list-item {
    width: 690px;
    list-style: none;
    font-weight: 700;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 750px) {
-   .intro__list_item {
+   .intro__list-item {
       width: 288px;
    }
 }
