--- a/blocks/places/place/__paragraph-item/place__paragraph-item.css
+++ b/blocks/places/place/__paragraph-item/place__paragraph-item.css
@@ -1,4 +1,4 @@
-.place__paragraph_item {
+.place__paragraph-item {
    width: 484px;
    margin: 0;
    margin-bottom: 27px;
@@ -9,13 +9,13 @@
 }
 
 @media screen and (max-width: 1070px) {
-   .place__paragraph_item {
+   .place__paragraph-item {
       width: 460px;
    }
 }
 
 @media screen and (max-width: 990px) {
-   .place__paragraph_item {
+   .place__paragraph-item {
       width: 352px;
       font-size: 16px;
       line-height: 26px;
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 753px) {
-   .place__paragraph_item {
+   .place__paragraph-item {
       width: 285px;
       text-align: left;
       line-break: auto;
@@ -35,6 +35,6 @@
    }
 }
 
-.place__paragraph_item:last-child {
+.place__paragraph-item:last-child {
    margin: 0 auto;
 }
