--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
    width: min-content;
    margin: 0 0 12px 0;
+   text-transform: uppercase;
    font-weight: 400;
    font-size: 12px;
    line-height: 12px;
