--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,6 @@
 .cover__title {
-   width: 560px;
+   width: 100%;
+   max-width: 560px;
    font-weight: 900;
    font-size: 72px;
    line-height: 76px;
@@ -11,8 +12,7 @@
 
 @media screen and (max-width: 750px) {
    .cover__title {
-      width: 255px;
-      font-weight: 900;
+      max-width: 255px;
       font-size: 32px;
       line-height: 35px;
       margin-bottom: 16px;
