--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
    position: relative;
    width: calc(100vw - (48px*2));
-   height: 740px;
+   min-height: 740px;
    display: flex;
    margin: 0 auto;
    flex-direction: column;
@@ -15,21 +15,19 @@
 @media screen and (max-width: 1070px) {
    .cover {
       width: 100%;
-      max-height: 640px;
+      min-height: 640px;
    }
 }
 
 @media screen and (max-width: 900px) {
    .cover {
-      width: 100%;
-      height: 480px;
+      min-height: 480px;
    }
 }
 
 @media screen and (max-width: 750px) {
    .cover {
-      width: 100%;
-      height: 200px;
+      min-height: 200px;
    }
 }
 
