--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,6 +2,13 @@
    text-decoration: none;
    font-size: 24px;
    color: #FFFFFF;
+   transition: 200ms ease;
+   margin-right: 18px;
+}
+
+.header__lang-link:hover {
+   opacity: .5;
+   transition: 200ms ease;
 }
 
 @media screen and (max-width: 750px) {
@@ -12,6 +19,7 @@
    }
 }
 
-.header__lang-link:nth-of-type(2n - 1) {
-   margin: 0 14px 0 0;
+.header__lang-link:last-child {
+   margin-right: 0;
+   
 }
