--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,6 @@
 .intro__title {
-   width: 690px;
+   width: 100%;
+   max-width: 690px;
    margin: 0;
    font-size: 54px;
    font-weight: 900;
@@ -9,7 +10,7 @@
 
 @media screen and (max-width: 750px) {
    .intro__title {
-      width: 250px;
+      max-width: 250px;
       font-size: 32px;
       line-height: 35px;
    }
