--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,26 +1,25 @@
 .intro {
-   width: 984px;
+   max-width: 984px;
    padding: 92px 0;
    margin: 0 auto;
 }
 
 @media screen and (max-width: 1070px) {
    .intro {
-      width: 928px;
+      max-width: 928px;
    }
 }
 
 @media screen and (max-width: 950px) {
    .intro {
-      /* width: calc(100% - (24px*2)); */
-      width: 720px;
+      max-width: 720px;
       padding: 88px 0;
    }
 }
 
 @media screen and (max-width: 750px) {
    .intro {
-      width: 288px;
+      max-width: 288px;
       padding: 64px 0;
    }
 }
