--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,8 +1,9 @@
 .lead__caption {
+   width: 100%;
+   max-width: 984px;
    font-size: 10px;
    font-weight: 400;
    line-height: 14px;
-   width: 984px;
    margin: 8px auto 0;
    letter-spacing: 1.5px;
    text-transform: uppercase;
@@ -11,19 +12,18 @@
 
 @media screen and (max-width: 1070px) {
    .lead__caption {
-      width: 928px;
+      max-width: 928px;
    }
 }
 
 @media screen and (max-width: 950px) {
    .lead__caption {
-      /* width: calc(100% - (24px*2)); */
-      width: 720px;
+      max-width: 720px;
    }
 }
 
 @media screen and (max-width: 750px) {
    .lead__caption {
-      width: 288px;
+      max-width: 288px;
    }
 }
