--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,6 @@
 .lead__subtitle {
-   width: 640px;
+   width: 100%;
+   max-width: 640px;
    font-size: 30px;
    line-height: 36px;
    color: #FFFFFF;
@@ -16,7 +17,7 @@
 
 @media screen and (max-width: 750px) {
    .lead__subtitle {
-      width: 288px;
+      max-width: 288px;
       font-size: 16px;
       line-height: 20px;
       padding: 16px 0 40px 0;
