--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title {
-   width: 720px;
+   width: 100%;
+   max-width: 720px;
    font-size: 96px;
    font-weight: 900;
    line-height: 100px;
@@ -10,7 +11,7 @@
 
 @media screen and (max-width: 750px) {
    .lead__title {
-      width: 288px;
+      max-width: 288px;
       font-size: 40px;
       line-height: 44px;
    }
