--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title {
    grid-area: title;
-   width: 460px;
+   width: 100%;
+   max-width: 460px;
    margin: 0;
    font-weight: 900;
    font-size: 72px;
@@ -10,13 +11,13 @@
 
 @media screen and (max-width: 1070px) {
    .place__title {
-      width: 440px;
+      max-width: 440px;
    }
 }
 
 @media screen and (max-width: 990px) {
    .place__title {
-      width: 330px;
+      max-width: 330px;
       font-size: 42px;
       line-height: 46px;
       align-self: end;
@@ -25,7 +26,7 @@
 
 @media screen and (max-width: 753px) {
    .place__title {
-      width: 288px;
+      max-width: 288px;
       font-size: 32px;
       line-height: 35px;
       align-self: auto;
