--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-   width: calc(100vw - (48px*2));
+   width: calc(100% - (40px*2));
    padding: 92px 0 24px 0;
    display: flex;
    justify-content: space-between;
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 950px) {
    .footer {
-      width: calc(100vw - (24px*2));
+      width: calc(100% - (16px*2));
       padding: 88px 0 24px 0;
    }
 }
@@ -16,7 +16,8 @@
 @media screen and (max-width: 750px) {
    .footer {
       display: block;
-      width: calc(100vw - (16px*2));
+      width: 100px;
+      min-width: 288px;
       padding: 64px 0 24px 0;
    }
 }
