--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -16,8 +16,8 @@
 @media screen and (max-width: 750px) {
    .footer {
       display: block;
-      width: 100px;
-      min-width: 288px;
+      width: 100%;
+      max-width: 288px;
       padding: 64px 0 24px 0;
    }
 }
