--- a/blocks/place/__paragraph-item/place__paragraph-item.css
+++ b/blocks/place/__paragraph-item/place__paragraph-item.css
@@ -1,7 +1,7 @@
 .place__paragraph-item {
    width: 100%;
    max-width: 484px;
-   margin: 0;
+   margin: 0 auto;
    margin-bottom: 27px;
    font-weight: 400;
    font-size: 18px;
@@ -29,13 +29,11 @@
       max-width: 285px;
       text-align: left;
       line-break: auto;
-      margin: 0 auto;
-      margin-bottom: 25px;
       object-fit: contain;
       object-position: center;
    }
 }
 
 .place__paragraph-item:last-child {
-   margin: 0 auto;
+   margin-bottom: 0;;
 }
