--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 753px) {
    .place__website {
-      width: 288px;
+      max-width: 288px;
       text-align: left;
       align-self: auto;
       margin-bottom: 32px;
